--- a/GameOfLife/MainWindow.xaml
+++ b/GameOfLife/MainWindow.xaml
@@ -3,13 +3,10 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        xmlns:local="clr-namespace:GameOfLife"
         mc:Ignorable="d"
-        Title="MainWindow" Height="450" Width="800"
-        Loaded="Window_Loaded">
-    <Grid>
-        <Image x:Name="image">
-            
-        </Image>
-    </Grid>
+        Height="400" Width="800"
+        Loaded="Window_Loaded"
+        WindowState="Maximized">
+    
+    <Image x:Name="image"/>
 </Window>
