--- a/GameOfLife/App.xaml
+++ b/GameOfLife/App.xaml
@@ -1,8 +1,6 @@
 ﻿<Application x:Class="GameOfLife.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="clr-namespace:GameOfLife"
-             StartupUri="MainWindow.xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
          
     </Application.Resources>
