--- a/GameOfLife/LifeWindow.xaml
+++ b/GameOfLife/LifeWindow.xaml
@@ -3,7 +3,22 @@
         xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-        mc:Ignorable="d">
+        mc:Ignorable="d"
+        Name="lifeWindow"
+        DataContext="{Binding ElementName=lifeWindow}"
+        d:Height="150" d:Width="250" >
+    <Window.InputBindings>
+        <KeyBinding Key="Esc"
+                    Command="ApplicationCommands.Close"/>
+        
+        <KeyBinding Key="F11"
+                    Command="{Binding ChangeFullScreenMode}"/>
+    </Window.InputBindings>
+
+    <Window.CommandBindings>
+        <CommandBinding Command="ApplicationCommands.Close"
+                        Executed="CloseCommandHandler"/>
+    </Window.CommandBindings>
 
     <Image x:Name="image"
            SnapsToDevicePixels="True"
