--- a/GameOfLife/MainWindow.xaml
+++ b/GameOfLife/MainWindow.xaml
@@ -4,40 +4,45 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         mc:Ignorable="d"
+        Topmost="True"
         Title="GameOfLife"
         FontSize="18"
         Height="450" Width="800">
+    <Window.InputBindings>
+        <KeyBinding Key="Esc"
+                    Command="ApplicationCommands.Close"/>
+    </Window.InputBindings>
+
+    <Window.CommandBindings>
+        <CommandBinding Command="ApplicationCommands.Close"
+                        Executed="CloseCommandHandler"/>
+    </Window.CommandBindings>
 
     <Grid>
         <Grid.ColumnDefinitions>
             <ColumnDefinition/>
             <ColumnDefinition/>
+            <ColumnDefinition/>
         </Grid.ColumnDefinitions>
 
-        <Grid Grid.Column="0">
-            <Grid.RowDefinitions>
-                <RowDefinition/>
-                <RowDefinition/>
-            </Grid.RowDefinitions>
-            
-            <CheckBox Grid.Row="0"
-                      x:Name="checkBox"
-                      HorizontalAlignment="Center"
-                      VerticalAlignment="Center"
-                      Padding="10" Margin="10">
-                Full screen enabled
-            </CheckBox>
+        <CheckBox Grid.Column="0"
+                  x:Name="checkBox"
+                  HorizontalAlignment="Center"
+                  VerticalAlignment="Center"
+                  VerticalContentAlignment="Center"
+                  Padding="10" Margin="10">
+            Full screen enabled
+        </CheckBox>
 
-            <Button Grid.Row="1"
-                    Click="Button_Click"
-                    HorizontalAlignment="Center"
-                    VerticalAlignment="Center"
-                    Padding="20, 10" Margin="10">
-                Open a new window
-            </Button>
-        </Grid>
-        
         <Button Grid.Column="1"
+                Click="Button_Click"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Center"
+                Padding="20, 10" Margin="10">
+            Open a new window
+        </Button>
+
+        <Button Grid.Column="2"
                 Click="Button_Click_1"
                 HorizontalAlignment="Center"
                 VerticalAlignment="Center"
